link to site pages

--- a/medium/account.mustache
+++ b/medium/account.mustache
@@ -170,13 +170,13 @@
           <li>
             <div class="list-box-listing">
               <div class="list-box-listing-img">
-                <a target="_blank" href="https://www.vertex360.co/template/{{slug}}">
+                <a target="_blank" href="https://www.vertex360.co/site/{{slug}}">
                   <img src="{{image}}=s512-c" alt="Vertex 360 | {{name}}" />
                 </a>
               </div>
               <div class="list-box-listing-content">
                 <div class="inner" style="position:inherit;line-height:20px">
-                  <a target="_blank" style="margin-right:8px;font-size:20px" href="https://www.vertex360.co/template/{{slug}}">{{name}}</a>
+                  <a target="_blank" style="margin-right:8px;font-size:20px" href="https://www.vertex360.co/site/{{slug}}">{{name}}</a>
                   <a target="_blank" href="https://{{slug}}.vertex360.co"><i class="sl sl-icon-share-alt"></i></a>
                   <br />
                   <span>{{template.category}}</span>
