--- a/medium/site.mustache
+++ b/medium/site.mustache
@@ -27,7 +27,7 @@
     							<span style="margin:6px">&middot;</span>
     							<span class="text-capitalize">{{site.category}}</span>
     							<span style="margin:6px">&middot;</span>
-    							<a class="btn btn-sm btn-success comments-button" style="padding:0.12em 1em; box-shadow:none" href="#">Subscribe</a>
+    							<a class="btn btn-sm btn-success comments-button" style="padding:0.12em 1em; box-shadow:none" href="#">Follow</a>
     					</div>
     				</div>
           </div>
