capitalize category text

--- a/medium/account.mustache
+++ b/medium/account.mustache
@@ -179,7 +179,7 @@
                   <a target="_blank" style="margin-right:8px;font-size:20px" href="https://www.vertex360.co/site/{{slug}}">{{name}}</a>
                   <a target="_blank" href="https://{{slug}}.vertex360.co"><i class="sl sl-icon-share-alt"></i></a>
                   <br />
-                  <span>{{category}}</span>
+                  <span style="text-transform:capitalize">{{category}}</span>
                 </div>
               </div>
             </div>
