updated sidebar categories

--- a/medium/feed-2.mustache
+++ b/medium/feed-2.mustache
@@ -72,13 +72,10 @@
                       <a href="#" class="sidebar-link">Recent</a>
                   </li>
                   <li>
-                      <a href="#" class="sidebar-link">Lifestyle</a>
+                      <a href="#" class="sidebar-link">Culture</a>
                   </li>
                   <li>
                       <a href="#" class="sidebar-link">Sports</a>
-                  </li>
-                  <li>
-                      <a href="#" class="sidebar-link">Politics</a>
                   </li>
                   <li>
                       <a href="#" class="sidebar-link">Tech</a>
