--- a/medium/widget/comments.mustache
+++ b/medium/widget/comments.mustache
@@ -11,18 +11,20 @@
 <div class="container pt-0 pb-4">
 	<div class="row justify-content-between">
 		<div class="col-md-8">
-      {{#user}}
-      <textarea id="text-area-comment" class="form-control mt-3 mb-3" rows="4" style="padding:0px 8px;resize:none"></textarea>
-      <button id="btn-submit-comment" class="mb-3 btn btn-success">Add Comment</button>
-      {{/user}}
+      <div id="comments-header">
+        {{#user}}
+        <textarea id="text-area-comment" class="form-control mt-3 mb-3" rows="4" style="padding:0px 8px;resize:none"></textarea>
+        <button id="btn-submit-comment" class="mb-3 btn btn-success">Add Comment</button>
+        {{/user}}
 
-      {{^user}}
-      <div class="mt-4 mb-4" style="background:#f9f9f9;padding:16px">
-        Please join or login to submit a comment:<br />
-        <button type="button" class="btn btn-primary mb-0 mt-2 mr-2" data-toggle="modal" data-target="#register-modal">JOIN</button>
-        <button type="button" class="btn mb-0 mt-2" data-toggle="modal" data-target="#login-modal">LOGIN</button>
+        {{^user}}
+        <div class="mt-4 mb-4" style="background:#f9f9f9;padding:16px">
+          Please join or login to submit a comment:<br />
+          <button type="button" class="btn btn-primary mb-0 mt-2 mr-2" data-toggle="modal" data-target="#register-modal">JOIN</button>
+          <button type="button" class="btn mb-0 mt-2" data-toggle="modal" data-target="#login-modal">LOGIN</button>
+        </div>
+        {{/user}}
       </div>
-      {{/user}}
 
       <div id="comments-container">
         {{#comments}}
@@ -63,13 +65,28 @@
   <script type="text/javascript" src="{{{cdn}}}/js/mustache.js"></script>
   <script>
     (function(){
+      var userAgent = navigator.userAgent.toLowerCase()
+
       Mustache.tags = ["<%", "%>"] // change delimiter so it doesn't conflict server side
       var data = window.__PRELOADED__
       var user = data.user
       var site = data.site // full site data
       var schema = data.schema // post, video, episode, etc
       var comments = data.comments || []
-      // var thread = null // full thread data
+
+      if (userAgent.includes('iphone')){
+        window.addEventListener('message', function(event){
+          var message = event.data
+          console.log('MESSAGE RECEIVED == ' + JSON.stringify(message))
+          if (message.type == null)
+            return
+
+          if (message.type == 'user-logged-in'){
+            user = message.user
+            $('#comments-header').html('USER LOGGED IN: '+user.username)
+          }
+        })
+      }
 
       var reloadUI = function(){
         var tpl = $('#tpl-comment').html()
