--- a/medium/widget/comments.mustache
+++ b/medium/widget/comments.mustache
@@ -11,19 +11,15 @@
 <div class="container pt-0 pb-4">
 	<div class="row justify-content-between">
 		<div class="col-md-8">
-      <div id="comments-header">
-        {{#user}}
+      <div id="comments-header" class="d-none">
         <textarea id="text-area-comment" class="form-control mt-3 mb-3" rows="4" style="padding:0px 8px;resize:none"></textarea>
         <button id="btn-submit-comment" class="mb-3 btn btn-success">Add Comment</button>
-        {{/user}}
+      </div>
 
-        {{^user}}
-        <div class="mt-4 mb-4" style="background:#f9f9f9;padding:16px">
-          Please join or login to submit a comment:<br />
-          <button type="button" class="btn btn-primary mb-0 mt-2 mr-2" data-toggle="modal" data-target="#register-modal">JOIN</button>
-          <button type="button" class="btn mb-0 mt-2" data-toggle="modal" data-target="#login-modal">LOGIN</button>
-        </div>
-        {{/user}}
+      <div id="register-or-login" class="mt-4 mb-4 d-none" style="background:#f9f9f9;padding:16px">
+        Please join or login to submit a comment:<br />
+        <button type="button" class="btn btn-primary mb-0 mt-2 mr-2" data-toggle="modal" data-target="#register-modal">JOIN</button>
+        <button type="button" class="btn mb-0 mt-2" data-toggle="modal" data-target="#login-modal">LOGIN</button>
       </div>
 
       <div id="comments-container">
@@ -83,12 +79,21 @@
 
           if (message.type == 'user-logged-in'){
             user = message.user
-            $('#comments-header').html('USER LOGGED IN: '+user.username)
+            reloadUI()
           }
         })
       }
 
       var reloadUI = function(){
+        if (user){
+          $('#comments-header').removeClass('d-none')
+          $('#register-or-login').addClass('d-none')
+        }
+        else {
+          $('#comments-header').addClass('d-none')
+          $('#register-or-login').removeClass('d-none')
+        }
+
         var tpl = $('#tpl-comment').html()
         var commentsHtml = ''
         comments.forEach(function(comment){
