--- a/medium/widget/comments.mustache
+++ b/medium/widget/comments.mustache
@@ -70,6 +70,9 @@
       var schema = data.schema // post, video, episode, etc
       var comments = data.comments || []
 
+      if (user == null)
+        $('#register-or-login').removeClass('d-none')
+
       if (userAgent.includes('iphone')){
         window.addEventListener('message', function(event){
           var message = event.data
