close modal after log in

--- a/medium/partials/auth.mustache
+++ b/medium/partials/auth.mustache
@@ -3,7 +3,7 @@
     <div class="modal-content" style="border-radius:4px;max-width:300px;margin:auto">
       <div class="modal-header">
         <h5 class="modal-title" id="exampleModalLabel">Login</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+        <button id="btn-close-login" type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
@@ -27,7 +27,7 @@
     <div class="modal-content" style="border-radius:4px;max-width:300px;margin:auto">
       <div class="modal-header">
         <h5 class="modal-title" id="registerModalLabel">Join</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+        <button id="btn-close-register" type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
