--- a/medium/widget/comments.mustache
+++ b/medium/widget/comments.mustache
@@ -82,6 +82,8 @@
 
           if (message.type == 'user-logged-in'){
             user = message.user
+            document.getElementById('btn-close-login').click()
+            document.getElementById('btn-close-register').click()
             reloadUI()
           }
         })
