show comment box if user logged in

--- a/medium/widget/comments.mustache
+++ b/medium/widget/comments.mustache
@@ -72,6 +72,8 @@
 
       if (user == null)
         $('#register-or-login').removeClass('d-none')
+      else
+        $('#comments-header').removeClass('d-none')
 
       if (userAgent.includes('iphone')){
         window.addEventListener('message', function(event){
