updated landing page copy

--- a/medium/about.mustache
+++ b/medium/about.mustache
@@ -3,16 +3,16 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Vertex 360 | Websites For Influencers.</title>
+    <title>Vertex 360 | Websites for the Modern Digital Age</title>
     <meta name="description" content="Vertex 360 launches websites for influencers, YouTubers, content creators, podcasters or anyone who want to expand their online brand." />
 
-    <meta property="og:title" content="Vertex 360 | Websites For Influencers." />
+    <meta property="og:title" content="Vertex 360 | Websites for the Modern Digital Age" />
   	<meta property="og:type" content="article" />
   	<meta property="og:url" content="https://www.vertex360.co" />
   	<meta property="og:image" content="https://lh3.googleusercontent.com/ZM_FCvAPcwUXd3NZJNpvA-t8jb4RQkkjVAKNXYk_SQHV155T-W36Ghos9W7iiTyxaiKzXl9Z2XhaABotatD3HomhAQ=s260-c" />
   	<meta property="og:image:width" content="260px" />
   	<meta property="og:image:height" content="260px" />
-  	<meta property="og:description" content="Vertex 360 launches websites for influencers, YouTubers, content creators, podcasters or anyone who want to expand their online brand." />
+  	<meta property="og:description" content="Vertex 360 launches websites for influencers, YouTubers, content creators, startups, podcasters or anyone who want to expand their online brand." />
 
     {{>head}}
 
@@ -83,10 +83,10 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6 my-md-auto mb-5 mb-md-0 text-center text-md-left">
-                        <h1 class="display-4 mt-2 mb-1 text-white" style="font-size:3rem">
-                          Websites For Influencers.
+                        <h1 class="display-4 mt-2 mb-1 text-white" style="font-size:2.5rem">
+                          Websites For the Modern Digital Age
                         </h1>
-                        <p class="text-white lead">Vertex 360 launches websites for influencers, YouTubers, content creators, podcasters or anyone who want to expand their online brand.</p>
+                        <p class="text-white lead mt-4">Vertex 360 launches websites for influencers, YouTubers, content creators, startups, podcasters or anyone who want to expand their online brand.</p>
                         <br />
                         <a href="/templates" class="mt-1 btn d-inline-flex flex-row align-items-center text-white btn-lg bg-success">
                             Get Started
@@ -198,7 +198,7 @@
                                     <div class="media-body">
                                         <h5 class="mt-0">Built-in Analytics (coming soon!)</h5>
                                         <span class="text-muted">
-                                          Influencers need to know what content generates the most traffic.
+                                          To grow, you need to know what content generates the most traffic.
                                           Vertex 360 sites come installed with all the analytics you need to make the right decisions.
                                         </span>
                                     </div>
@@ -226,7 +226,7 @@
                     <div class="col-md-6 order-2 order-md-1 my-md-auto">
                         <h1>Professional Design</h1>
                         <p class="text-muted lead">
-                          Your influencer website represents your brand. Strongly convey your brand with our
+                          Your website represents your brand. Strongly convey your brand with our
                           sleek, modern and professional templates. Your fans will be impressed with the
                           sophisticated look of your site and new visitors will have a great first impression.
                         </p>
@@ -249,7 +249,7 @@
                     <div class="col-md-6 my-md-auto">
                         <h1>Easy Maintenance</h1>
                         <p class="text-muted lead">
-                          Simply input your content and walk away - no coding required! No messing with confusing editors, drag & drop tools, or ridiculously complicated features for "beginners". On Vertex 360, your influencer website is built for speed and simplicity so you can focus on growing your audience!
+                          Simply input your content and walk away - no coding required! No messing with confusing editors, drag & drop tools, or ridiculously complicated features for "beginners". On Vertex 360, your website is built for speed and simplicity so you can focus on growing your audience!
                         </p>
                     </div>
                 </div>
