updated template categories

--- a/medium/templates.mustache
+++ b/medium/templates.mustache
@@ -32,13 +32,16 @@
                       <a href="#" class="sidebar-link" data-rel="all">All templates</a>
                   </li>
                   <li>
-                      <a href="#" class="sidebar-link" data-rel="youtube">Youtube</a>
+                      <a href="#" class="sidebar-link" data-rel="influencer">Influencers</a>
                   </li>
                   <li>
-                      <a href="#" class="sidebar-link" data-rel="blog">Blog</a>
+                      <a href="#" class="sidebar-link" data-rel="portfolio">Portfolio</a>
                   </li>
                   <li>
-                      <a href="#" class="sidebar-link" data-rel="podcast">Podcast</a>
+                      <a href="#" class="sidebar-link" data-rel="resume">Resume</a>
+                  </li>
+                  <li>
+                      <a href="#" class="sidebar-link" data-rel="media">Media</a>
                   </li>
               </ul>
           </nav>
