added news category

--- a/medium/templates.mustache
+++ b/medium/templates.mustache
@@ -41,7 +41,7 @@
                       <a href="#" class="sidebar-link" data-rel="resume">Resume</a>
                   </li>
                   <li>
-                      <a href="#" class="sidebar-link" data-rel="media">Media</a>
+                      <a href="#" class="sidebar-link" data-rel="news">News</a>
                   </li>
               </ul>
           </nav>
