sidebar data type

--- a/medium/profile.mustache
+++ b/medium/profile.mustache
@@ -214,7 +214,7 @@
               <hr />
               <ul class="list-unstyled components">
                   <li class="active">
-                      <a href="#" class="sidebar-link" data-rel="templates">Templates</a>
+                      <a href="#" class="sidebar-link" data-rel="all">Templates</a>
                   </li>
                   <li>
                       <a href="#" class="sidebar-link" data-rel="about">About {{profile.firstName}}</a>
