link to profile page

--- a/medium/account.mustache
+++ b/medium/account.mustache
@@ -106,6 +106,7 @@
 			<div class="col-lg-8 col-md-8">
         <div id="content-profile" class="dashboard-list-box margin-top-0">
           <a style="float:right;border-radius:4px;background:#357d3e;margin-top:16px;margin-right:16px" class="button" href="/templates"><i class="sl sl-icon-plus"></i> Create Your Site</a>
+          <a style="float:right;border-radius:4px;background:#354e7d;margin-top:16px;margin-right:16px" class="button" href="/profile/{{user.slug}}">View Your Profile</a>
 					<h4 class="gray">Profile Details</h4>
 					<div class="dashboard-list-box-static">
             <div class="row">
