--- a/medium/widget/comments.mustache
+++ b/medium/widget/comments.mustache
@@ -133,6 +133,7 @@
         var comment = {
           text: commentText,
           thread: threadId,
+          site: JSON.stringify({id:site.id, slug:site.slug, name:site.name, image:site.image}),
           profile: JSON.stringify({
             id: user.id,
             firstName: user.firstName,
