remove image scaling param

--- a/medium/feed-2.mustache
+++ b/medium/feed-2.mustache
@@ -99,9 +99,9 @@
                         <div id="threads-container" class="col-md-9">
                           {{#threads.recent}}
                           <div class="bg-white mb-4 thread-preview">
-                            <div class="thread-preview-img" style="background: url('{{{subject.image}}}=s440-c')">
+                            <div class="thread-preview-img" style="background: url('{{{subject.image}}}')">
                               <a target="_blank" href="{{subject.url}}">
-                                <img src="{{subject.image}}=s440-c" />
+                                <img src="{{subject.image}}" />
                               </a>
                             </div>
                             <div class="thread-preview-container">
