--- a/medium/feed-2.mustache
+++ b/medium/feed-2.mustache
@@ -36,6 +36,7 @@
         max-height: 220px; */
         width: 100%;
         height: 100%;
+        max-height: 230px;
         opacity:0;
       }
 
